fix stretched images css and mobile

--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ PORTFOLIO SECTION
 -----------------------------------------------------------------------------*/
 .row img {
   padding-bottom: 7%;
-  min-height: 100%;
+  min-height: auto;
 }
  
 /*----------------------------------------------------------------------------- 
